Dockerized components, fixed some business logic bugs